--- a/Hackathon/Client/Pages/Index.razor
+++ b/Hackathon/Client/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Bem-vindo</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+Aqui você pode realizar upload de vídeos e visualiza-los!
