--- a/Hackathon/Client/wwwroot/css/app.css
+++ b/Hackathon/Client/wwwroot/css/app.css
@@ -99,3 +99,10 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+.backgroud-sidebar {
+    background-color: #FF4500;
+    font-weight: 500;
+}
+
+
