--- a/Hackathon/Client/Pages/FormUpload.razor
+++ b/Hackathon/Client/Pages/FormUpload.razor
@@ -1,5 +1,6 @@
 ﻿@page "/upload"
 @using Hackathon.Domain.Videos
+@inject HttpClient Http
 @using System.Net.Http.Headers
 @using static System.Net.WebRequestMethods
 @inject IJSRuntime JSRuntime
@@ -22,7 +23,6 @@
     private int maxAllowedFiles = int.MaxValue;
     private long maxFileSize = long.MaxValue;
     private List<string> fileNames = new();
-//    private List<UploadResult> uploadResults = new();
 
     private async Task OnInputFileChange(InputFileChangeEventArgs e)
     {
@@ -41,13 +41,8 @@
                 fileName: file.Name);
         }
 
-     //   var response = await Http.PostAsync("/api/File", content);
-       // var newUploadResults = await response.Content.ReadFromJsonAsync<List<UploadResult>>();
+        var response = await Http.PostAsync("/api/VideosController", content);
 
-       // if (newUploadResults is not null)
-      //  {
-      //      uploadResults = uploadResults.Concat(newUploadResults).ToList();
-      //  }
      }
 
     }
